policies/mutate-emptydir.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: add-emptydir-workdir
  namespace: bikkfabian
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: add-workdir-emptydir
      match:
        any:
          - resources:
              kinds:
                - Deployment
      exclude:
        any:
          - resources:
              selector:
                matchLabels:
                  storage.example/skip-emptydir: "true"
      preconditions:
        all:
          - key: "{{ request.object.metadata.labels.\"storage.example/attach-emptydir\" || 'false' }}"
            operator: Equals
            value: "true"
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                volumes:
                  - (name): workdir
                    emptyDir:
                      sizeLimit: 256Mi
                containers:
                  - (name): "*"
                    volumeMounts:
                      - (name): workdir
                        mountPath: /work
